src/objects/Bank_Info__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This is a test</description>
    <fields>
        <fullName>File_Test__c</fullName>
        <label>File Test</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>file__c</fullName>
        <description>UPLOAD A FILE</description>
        <label>file</label>
        <required>true</required>
        <type>File</type>
    </fields>
    <fields>
        <fullName>test_test__c</fullName>
        <label>test test</label>
        <type>Url</type>
    </fields>
    <label>Bank Info</label>
    <pluralLabel>Bank Infos</pluralLabel>
</CustomObject>